# Mobile-Robot-Navigation-Using-Deep-Reinforcement-Learning-and-ROS

./: .gitignore  .gitmodules  README.md  requirements.txt
drl_agent/: CMakeLists.txt  package.xml
drl_agent/config/: environment.yaml  hyperparameters.yaml  nav2.yaml  slam.yaml  test_config.yaml  train_config.yaml
drl_agent/launch/: localization.launch.py  nav2.launch.py  slam.launch.py  test_td7.launch.py  train_drl_agent.launch.py
drl_agent/scripts/: gazebo_env.py  point_cloud2.py  td3_agent.py  test_td3_agent.py  train_td3_agent.py
drl_agent/scripts/environment/: environment.py  environment_interface.py
drl_agent/scripts/policies/: td3_agent.py  td7_agent.py  test_td3_agent.py  test_td7_agent.py  train_td3_agent.py  train_td7_agent.py
drl_agent/scripts/policy/: td7_agent.py  test_td7_agent.py  train_td7_agent.py
drl_agent/scripts/utils/: buffer.py  file_manager.py  load_yaml.py  path_helper.py  plot_metrics.py  plot_reward.py  plot_trajectories_on_map.py  replay_buffer.py
drl_agent_bringup/: CMakeLists.txt  package.xml
drl_agent_bringup/launch/: gazebo_world.launch.py  localization.launch.py  nav2.launch.py  rviz.launch.py  simulation.launch.py  slam.launch.py
drl_agent_bringup/scripts/: environment.py
drl_agent_bringup/worlds/: td7.world
drl_agent_description/: CMakeLists.txt  package.xml
drl_agent_description/launch/: agent_description.launch.py  gazebo_world.launch.py  rviz.launch.py  simulation.launch.py  spawn_agent.launch.py
drl_agent_description/rviz/: my_config.rviz
drl_agent_description/worlds/: TD3.world  dynamic_world.world
drl_agent_gazebo/: CMakeLists.txt  package.xml
drl_agent_gazebo/config/: config.rviz  nav2.yaml  (+1 more)
drl_agent_interfaces/: CMakeLists.txt  package.xml
(+29 files in other folders)
